[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Singletons/PlayerStats.gd" type="Script" id=2]

[node name="PlayerStats" instance=ExtResource( 1 )]
pause_mode = 1
script = ExtResource( 2 )

[node name="BowTimer" type="Timer" parent="." index="0"]
wait_time = 0.5
one_shot = true

[node name="Regeneration" type="Timer" parent="." index="1"]
wait_time = 3.0
autostart = true
[connection signal="timeout" from="BowTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Regeneration" to="." method="_on_Regeneration_timeout"]
